# LiteQuantumComputingSimulator

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_gates.cpp
docs/: ARCHITECTURE.md
examples/: CMakeLists.txt  algorithms_demo.cpp  bell_state.cpp  ghz_state.cpp  grover.cpp  noisy_bell.cpp  qft.cpp  shor.cpp  stabilizer.cpp  trajectory_noise.cpp  vqe_gradient.cpp  vqe_h2.cpp
include/lqcs/: lqcs.hpp
include/lqcs/algorithms/: algorithms.hpp  arithmetic.hpp  bernstein_vazirani.hpp  deutsch_jozsa.hpp  grover.hpp  number_theory.hpp  oracles.hpp  qft.hpp  qpe.hpp  shor.hpp  simon.hpp  vqe.hpp
include/lqcs/backend/: backend.hpp  density_matrix.hpp  density_matrix_simulator.hpp  noise.hpp  stabilizer.hpp  stabilizer_simulator.hpp  statevector.hpp  statevector_simulator.hpp
include/lqcs/circuit/: gate.hpp  instruction.hpp  parametric_circuit.hpp  quantum_circuit.hpp
include/lqcs/core/: aligned_allocator.hpp  bit_utils.hpp  random.hpp  types.hpp
include/lqcs/io/: qasm.hpp
include/lqcs/result/: result.hpp
include/lqcs/transpiler/: gate_fusion.hpp  pass.hpp  redundant_elimination.hpp  transpiler.hpp
python/: CMakeLists.txt
python/pylqcs/: __init__.py  visualization.py
python/pylqcs/examples/: bell.py  shor_demo.py
python/src/: bindings.cpp
src/algorithms/: arithmetic.cpp  bernstein_vazirani.cpp  deutsch_jozsa.cpp  grover.cpp  number_theory.cpp  oracles.cpp  qft.cpp  qpe.cpp  shor.cpp  simon.cpp  vqe.cpp
src/backend/: density_matrix.cpp  density_matrix_simulator.cpp  noise.cpp  stabilizer.cpp  stabilizer_simulator.cpp  statevector.cpp  statevector_simulator.cpp
src/backend/kernels/: gate_kernels.cpp  kernels.hpp  simd.hpp
src/circuit/: gate.cpp  parametric_circuit.cpp  quantum_circuit.cpp
src/io/: qasm.cpp
src/result/: result.cpp
src/transpiler/: gate_fusion.cpp  redundant_elimination.cpp
src/visualization/: circuit_drawer.cpp
tests/: CMakeLists.txt  test_algorithms.cpp  test_circuit.cpp  test_density.cpp  test_equivalence.cpp  test_expectation.cpp  test_gate_fusion.cpp  test_gates.cpp  test_measurement.cpp  test_midcircuit.cpp  test_number_theory.cpp  test_pauli_rotation.cpp  test_qasm.cpp  test_qft.cpp  test_shor.cpp  test_stabilizer.cpp  test_statevector.cpp  test_trajectory.cpp  test_transpiler.cpp  test_vqe.cpp
tests/python/: test_bindings.py
